@@ -354,6 +354,9 @@ void _client_process(conn_t c) {
 
     log_debug(ZONE, "got packet from client, processing");
 
+    /* accounting */
+    c->in_stanzas++;
+
     chunk = chunk_new(c);
 
     if (chunk->nad == NULL)
@@ -690,8 +693,13 @@ int client_io(mio_t m, mio_action_t a, int fd, void *data, void *arg)
 	/* report closed connection */
 	if (c->ip && c->userid)
 	{
+	    /* if the user never authenticated, we still have to write its IP */
+	    if (c->state != state_OPEN)
+		log_write(c->c2s->log, LOG_NOTICE, "user %s, ip=%s never authenticated", jid_full(c->userid), c->ip);
+
+
 	    /* write it to the logfile */
-	    log_write(c->c2s->log, LOG_NOTICE, "user %s disconnected, in=%li B, out=%li B", jid_full(c->userid), c->in_bytes, c->out_bytes);
+	    log_write(c->c2s->log, LOG_NOTICE, "user %s disconnected, in=%lu B, out=%lu B, stanzas_in=%u, stanzas_out=%u", jid_full(c->userid), c->in_bytes, c->out_bytes, c->in_stanzas, c->out_stanzas);
 
 	    /* send a notification message if requested */
 	    connectionstate_send(c->c2s->config, c->c2s->sm, c, 0);
